!!! feat(auth, user): - Breaking changes: вместо username теперь userId или aliasId (если задан) '/api/user/avatar/:userIdOrAliasId', '/api/user/public/:userIdOrAliasId', '/api/user/protected/:userIdOrAliasId' \\ /api/users/unique?field=email&?value=my@mi.com - проверка уникальных полей в рамках projectId \\ config.server.features.security.token.refreshTokenLife: 604800 (неделя) \\ логин теперь ищет сначала по userId, aliasId, username, email \\ expiresIn хранится теперь в токене (чтобы социалки подключить) \\ дополнительные поля для user: userId, aliasId, providerData, providerScopes, description, comments, \\ доп поля для token: provider, expiresIn \\ добавил проверку на уникальность при регистрации и изменении данных пользователя \\ либа генерации коротких читаемых id: shortid@2.2.14
