# src/db/model/user.js
@@ -1,18 +1,23 @@
-/* eslint-disable func-names */
+/* eslint-disable func-names,no-underscore-dangle */
 import crypto from 'crypto';
 import validator from 'validator';
 import mongoose from 'mongoose';
+import shortid from 'shortid';
 import omit from 'lodash/omit';
+import pick from 'lodash/pick';
 
 import { generateTokenValue } from '../../utils/common';
 
 export const PUBLIC_TO_ALL_ATTRS = [
-  'username',
+  'userId',
   'displayName',
-  // 'profileImageURI',
+  'aliasId',
+  'description',
+  // 'profileImageURI', - получать через отдельное api
 ];
 export const PROTECTED_ATTRS = [
   ...PUBLIC_TO_ALL_ATTRS,
+  'username',
   'firstName',
   'lastName',
   'middleName',
@@ -21,14 +26,18 @@ export const PROTECTED_ATTRS = [
   'address',
 ];
 
-export const PUBLIC_EDITABLE_ATTRS = [
+export const EDITABLE_ATTRS = [
+  'username', // нужно проверить уникальность
+  'aliasId', // нужно проверить уникальность
+  'email', // нужно проверить уникальность
   'firstName',
   'lastName',
   'middleName',
   'displayName',
-  'email',
   'phone',
   'address',
+  'description',
+  'comment',
   'profileImageURI',
   'contextData',
 ];
@@ -36,12 +45,14 @@ export const PUBLIC_EDITABLE_ATTRS = [
 export const UNIQUE_ATTRS = [
   'username',
   'email',
+  'aliasId',
 ];
 
 export const PASSWORD_ATTRS = [
   'hashedPassword',
   'password',
   'salt',
+  '_plainPassword',
 ];
 
 export const OMIT_USER_ATTRS = [
@@ -53,16 +64,47 @@ export const ADMIN_ROLE = 'admin';
 export const USER_ROLE = 'user';
 export const GET_PROTECTED_INFO_ROLE = 'protector';
 
+export function isUserIdValid(userId) {
+  return shortid.isValid(userId);
+}
+
 export const UserSchema = new mongoose.Schema({
   // ======================================================
   // AUTH
   // ======================================================
+
+  /*
+   Можно авторизоваться по userId \ username \ email
+  */
+  // userId: {
+  //   type: Number,
+  //   unique: true,
+  //   default: () => Math
+  // },
+  _id: {
+    type: String,
+    default: shortid.generate,
+  },
   username: {
     type: String,
     // у нас уникальность должна быть в рамках projectId, поэтому берем на себя проверку уникальности
     // unique: 'Username already exists',
-    required: 'Please fill in a username',
+    // required: 'Please fill in a username',
+    required: false,
     trim: true,
+  },
+  email: {
+    type: String,
+    required: false, // может и не быть почты
+    // у нас уникальность должна быть в рамках projectId, поэтому берем на себя проверку уникальности
+    // unique: true,
+    lowercase: true,
+    trim: true,
+    // match: /^\w+([.-]?\w+)*@\w+([.-]?\w+)*(\.\w{2,3})+$/
+    validate: [
+      (email) => validator.isEmail(email, { require_tld: false }),
+      'Please fill a valid email address',
+    ],
   },
   hashedPassword: {
     type: String,
@@ -95,19 +137,6 @@ export const UserSchema = new mongoose.Schema({
     type: String,
     trim: true,
   },
-  email: {
-    type: String,
-    required: true,
-    // у нас уникальность должна быть в рамках projectId, поэтому берем на себя проверку уникальности
-    // unique: true,
-    lowercase: true,
-    trim: true,
-    // match: /^\w+([.-]?\w+)*@\w+([.-]?\w+)*(\.\w{2,3})+$/
-    validate: [
-      (email) => validator.isEmail(email, { require_tld: false }),
-      'Please fill a valid email address',
-    ],
-  },
   phone: {
     type: String,
     validate: [
@@ -119,6 +148,20 @@ export const UserSchema = new mongoose.Schema({
   },
   address: {
     type: String,
+  },
+  description: {
+    type: String,
+  },
+
+  /**
+   * имя страниц, которое выдят все пользователи вместо userId (username - это логин и может не совпадать)
+   */
+  aliasId: {
+    type: String,
+    // у нас уникальность должна быть в рамках projectId, поэтому берем на себя проверку уникальности
+    // unique: true,
+    lowercase: true,
+    trim: true,
   },
   profileImageURI: {
     type: String,
@@ -160,7 +203,14 @@ export const UserSchema = new mongoose.Schema({
     type: String,
     required: 'Provider is required',
   },
-  providerData: {},
+  providerScopes: {
+    type: [{
+      type: String,
+    }],
+  },
+  providerData: {
+    type: Map,
+  },
   additionalProvidersData: {},
   projectId: {
     type: String,
@@ -178,19 +228,29 @@ export const UserSchema = new mongoose.Schema({
     type: Date,
     default: Date.now,
   },
+  comments: {
+    type: String,
+  },
 });
 
 // ======================================================
 // VIRTUAL
 // ======================================================
 UserSchema.virtual('userId')
+  .set(function (userId) {
+    // this._id = mongoose.Types.ObjectId.fromString(userId);
+    if (!isUserIdValid(userId)) {
+      throw new Error('Not valid userId format (see "shortid" package)');
+    }
+    this._id = userId;
+  })
   .get(function () {
-    return this.id;
+    // return this.id;
+    return this._id;
   });
 
 UserSchema.virtual('password')
   .set(function (password) {
-    // todo @ANKU @LOW - _plainPassword
     this._plainPassword = password;
     this.salt = generateTokenValue();
     // более секьюрно - this.salt = generateTokenValue(128);
@@ -214,7 +274,10 @@ UserSchema.methods.checkPassword = function (password) {
   return this.encryptPassword(password) === this.hashedPassword;
 };
 UserSchema.methods.getSafeUser = function () {
-  return omit(this.toJSON({ virtuals: false }), PASSWORD_ATTRS);
+  return omit(this.toJSON({ virtuals: true }), OMIT_USER_ATTRS);
+};
+UserSchema.methods.getPublicInfo = function () {
+  return pick(this.toJSON({ virtuals: true }), PUBLIC_TO_ALL_ATTRS);
 };
 
 export const USER_MODEL_NAME = 'User';
